@@ -1,7 +1,7 @@
 /****************************************
 *  Computer Algebra System SINGULAR     *
 ****************************************/
-/* $Id: febase.cc,v 1.8 1997-04-25 15:03:56 obachman Exp $ */
+/* $Id: febase.cc,v 1.9 1997-04-25 19:21:29 obachman Exp $ */
 /*
 * ABSTRACT: i/o system, handling of 'voices'
 */
@@ -153,7 +153,7 @@ FILE * feFopen(char *path, char *mode, char *where,int useWerror)
 #ifdef MSDOS
   char *env=getenv("SPATH");
 #else
-  char *env=getenv("SingularPath");
+  char *env=getenv("SINGULARPATH");
 #endif
   char *s;
   if (where==NULL) s=(char *)AllocL(250);
@@ -205,11 +205,11 @@ FILE * feFopen(char *path, char *mode, char *where,int useWerror)
     }
     else
     {
-      if (need_len > strlen(where)) ss = AllocL(need_len);
+      if (need_len > strlen(where)) ss = (char *) AllocL(need_len);
       strcpy(ss, s);
     }
     strcpy(ss,SINGULAR_DATADIR);
-    strcat(s, DIR_SEPP);
+    strcat(ss, DIR_SEPP);
     strcat(ss,path);
     f=fopen(ss,mode);
     if (ss != s) FreeL((ADDRESS)ss);
